# oracle-qa

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  DEVNET_E2E_RUNBOOK.md
migrations/: init.sql
spec/: README.md
spec/api-quality-v1/: NORMATIVE.md
spec/api-quality-v1/examples/: delivery.min.json  sla.min.json  sla.tiny.json
spec/api-quality-v1/schema/: delivery-evidence.schema.json  sla-document.schema.json
spec/signed-delivery-v2/: DRAFT.md
src/: chain.rs  config.rs  db.rs  error.rs  evaluator.rs  main.rs  pipeline.rs  server.rs  settler.rs  types.rs
