[package]
name = "oracle-qa"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "API Response Quality Oracle — the first official x402 SLA-Escrow oracle for verifiable API quality adjudication"
repository = "https://github.com/miraland-labs/x402"
readme = "README.md"
keywords = ["x402", "oracle", "sla", "api-quality", "solana"]
categories = ["web-programming", "cryptography"]

[[bin]]
name = "oracle-qa"
path = "src/main.rs"

[dependencies]
# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.45", features = ["full"] }

# Solana chain interaction
solana-client = "2.3"
solana-pubsub-client = "2.3"
solana-sdk = "2.3"
solana-program = "2.3"
solana-transaction-status = "2.3"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }

# SLA-Escrow API (for instruction builders, event types, account structs)
sla-escrow-api = { path = "../sla-escrow/api" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytemuck = "1.16"
bs58 = "0.5"
base64 = "0.22"
hex = "0.4"

# HTTP client (for fetching SLA docs and delivery evidence)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async utilities
futures-util = "0.3"

# Crypto
sha2 = "0.10"

# Config & env
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# JSON Schema validation
jsonschema = "0.28"

# Time
chrono = "0.4"

# Steel framework (for event/account type compat)
steel = { package = "miraland-steel", version = "4.0.3" }
